Harden WFL and ZIP import workflows